--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unicode"
-version = "0.1.0"
+version = "0.1.0" # remember to update version in lib.rs
 authors = ["printfn <printfn@users.noreply.github.com>"]
 edition = "2018"
 description = "Unicode Rust Library"
