--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unicode"
+name = "unicode-rs"
 version = "0.1.0" # remember to update version in lib.rs
 authors = ["printfn <printfn@users.noreply.github.com>"]
 edition = "2018"
